WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171316
Encoded filename should be decoded for WKContentExtension.identifier
https://bugs.webkit.org/show_bug.cgi?id=171316
Summary
Encoded filename should be decoded for WKContentExtension.identifier
Alex Christensen
Reported
2017-04-25 23:36:55 PDT
Encoded filename should be decoded for WKContentExtension.identifier
Attachments
Patch
(41.04 KB, patch)
2017-04-25 23:37 PDT
,
Alex Christensen
aestes
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-04-25 23:37:31 PDT
Created
attachment 308223
[details]
Patch
Build Bot
Comment 2
2017-04-25 23:39:19 PDT
Attachment 308223
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/WKContentExtensionStore.mm:148: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/WKContentExtensionStore.mm:161: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andy Estes
Comment 3
2017-04-26 10:06:12 PDT
Comment on
attachment 308223
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=308223&action=review
> Source/WebKit2/UIProcess/API/APIContentExtensionStore.cpp:387 > + auto contentExtension = createExtension(identifier, metaData, fileData); > + completionHandler(WTFMove(contentExtension), { });
I don't think you need a local variable for contentExtension.
Alex Christensen
Comment 4
2017-04-26 10:09:04 PDT
http://trac.webkit.org/r215807
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug